--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 11</title>
     <link rel="stylesheet" href="./css/index.css" />
-    <title>Homework 11</title>
   </head>
   <body>
     <form class="search-form" id="search-form">
@@ -15,8 +14,12 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button class="search-btn" type="submit">Search</button>
     </form>
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
+    <button type="button" class="load-more">Load more</button>
     <script src="./js/index.js" type="module"></script>
   </body>
 </html>
